completed home page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>genterpw</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>genterpw</h1>
+        <p>the smartest man</p>
     </header>
+    <div class="about">
+        <h2>About genterpw</h2>
+        <p>Genterpw is a begginer progammer</p>
+    </div>
+    <div class="gallery">
+        <div>
+            <img src="images/whitegenter.jpg" alt="picture of genter">
+            <h2>Unburnt Genter</h2>
+            <p>Find out about Genter</p>
+        </div>
+        <div>
+            <img src="images/redgenter.jpg" alt="picture of genter">
+            <h2>Burnt Genter</h2>
+            <p>Find out about Genter</p>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; Genterpw 2018</p>
+    </footer>
 </body>
 </html>
