--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
     </div>
     <div class="gallery">
         <div>
-            <img src="images/whitegenter.jpg" alt="picture of genter">
-            <h2>Unburnt Genter</h2>
-            <p>Find out about Genter</p>
+
+            <a href="https://genterpw.github.io/portfolio/" class="projects">
+              <div class="portfolio centertext"><p>Portfolio</p></div>
+            </a>
+
+          <h2>About genter</h2>
         </div>
         <div>
-            <img src="images/redgenter.jpg" alt="picture of genter">
-            <h2>Burnt Genter</h2>
-            <p>Find out about Genter</p>
+          <a href="https://genterpw.github.io/rainbow/" class="projects">
+            <div class="rainbow centertext" ><p>rainbow</p></div>
+          </a>
+          <h2>Alternating colors</h2>
         </div>
     </div>
     <footer>
